fix height stretch?

--- a/assets/_sass/_base.scss
+++ b/assets/_sass/_base.scss
@@ -27,18 +27,17 @@ $bold-color-1: #07a;
 $bold-color-2: #059;
 $bold-color-3: #038;
 
+html { height: 100%; }
+
+body { height: 100%; }
+
 html, body {
     background-color: $shadow-color;
     font-family: $sans-font;
     border: 0;
     padding: 0;
     margin: 0;
-
     width: 100%;
-    min-height: 100%;
-
-
-//    min-height: 1000vh;
 }
 
 img {
